# trend-analyzer

./: .env.example  .gitignore  AGENTS.md  README.md  Trend_Composition_Agent.ipynb  Trend_Composition_Agent_Directors+_Demo.ipynb  catalog.json  explanation.md  main.py  pyproject.toml
TODO/: function_tools_refactor.md  structured_output.md
config/: analysis.yml  infrastructure.yml
database/: agg_trend_descriptor.sql  agg_trend_normalizer.sql
output/: 20251119_193707_trend_analysis_report.out  20251119_195615_trend_analysis_report.out  20251119_195807_trend_analysis_report.out  20251119_200453_trend_analysis_report.out  20251122_201002_trend_analysis_report.out  trend_analysis_report.txt
output/20251123_073431/: trend_analysis_report.md
output/20251123_091106/: trend_analysis_report.html  trend_analysis_report.md
output/20251124_203804/: trend_analysis_report.html  trend_analysis_report.md
output/20251126_221717/: trend_analysis_report.html  trend_analysis_report.md
output/20251126_221717/data/: 20251126_221740_year_channel_c57625.csv
output/20251127_102108/: trend_analysis_report.html  trend_analysis_report.md
output/20251127_104618/: trend_analysis_report.html  trend_analysis_report.md
output/20251127_104618/config/: analysis.yml
output/20251201_201217/: trend_analysis_report.html  trend_analysis_report.md
output/20251201_210003/: trend_analysis_report.html  trend_analysis_report.md
output/20251202_212954/: current_prompt.txt  trend_analysis_report.html  trend_analysis_report.md
output/20251203_212241/: current_prompt.txt  trend_analysis_report.html  trend_analysis_report.md
output_data/: 20251119_192909_data.csv  20251119_193651_data.csv
src/trend_analyzer/: __init__.py  __main__.py  agent.py  ai_runner.py  auth.py  config.py  cube_builder.py  data_access.py  display.py  logging_config.py  metrics.py  postgres_client.py
(+73 files in other folders)
