[project]
name = "trend-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-aiplatform>=1.113.0",
    "google-cloud-bigquery>=3.37.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openai-agents>=0.3.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pydantic>=2.11.9",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "vertexai>=1.43.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"
update_changelog_on_bump = true
